--- a/E_TICARET_2023/E_TICARET_2023.csproj
+++ b/E_TICARET_2023/E_TICARET_2023.csproj
@@ -263,6 +263,7 @@
       <DependentUpon>E_Ticaret.edmx</DependentUpon>
       <LastGenOutput>E_Ticaret.cs</LastGenOutput>
     </Content>
+    <Content Include="Resim\style.css" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.esm.js" />
@@ -336,7 +337,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Resim\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
