--- a/E_TICARET_2023/E_TICARET_2023.csproj
+++ b/E_TICARET_2023/E_TICARET_2023.csproj
@@ -300,6 +300,7 @@
       <DependentUpon>E_Ticaret.edmx</DependentUpon>
       <LastGenOutput>E_Ticaret.cs</LastGenOutput>
     </Content>
+    <Content Include="Resim\bilgisayarResmi.png" />
     <Content Include="Resim\style.css" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
